add hover for nav and other

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
     <nav class="nav-container">
         <ul class="nav-bar">
-            <li class="nav-bar__item nav-btn nav-bar__item--active">
+            <li class="nav-bar__item nav-btn">
                 <a href="#" class="nav-btn__link">Чем полезно?</a>
             </li>
             <li class="nav-bar__item nav-btn">
-                <a href="#" class="nav-btn__link">Как это работает</a>
+                <a href="#" class="nav-btn__link">Как это работает?</a>
             </li>
             <li class="nav-bar__item nav-btn">
                 <a href="#" class="nav-btn__link">FAQ</a>
@@ -28,7 +28,7 @@
             <li class="nav-bar__item nav-btn">
                 <a href="#" class="nav-btn__link">Задать вопрос</a>
             </li>
-            <li class="nav-bar__item nav-btn">
+            <li class="nav-bar__item nav-btn nav-bar__item--last">
                 <a href="#" class="nav-btn__link nav-btn__link--red">Личный кабинет</a>
             </li>
         </ul>
@@ -48,7 +48,8 @@
         </div>
     </div>
     <!--end of slider-->
-
+</section>
+<section class="call-to-action">
     <div class="telegram-container">
         <h2 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h2>
         <div class="telegram-button">
