change hover effect

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="nav-bar__item nav-btn">
                 <a href="#" class="nav-btn__link">Задать вопрос</a>
             </li>
-            <li class="nav-bar__item nav-btn nav-bar__item--last">
+            <li class="nav-bar__item nav-btn">
                 <a href="#" class="nav-btn__link nav-btn__link--red">Личный кабинет</a>
             </li>
         </ul>
