add new section

--- a/index.html
+++ b/index.html
@@ -49,13 +49,80 @@
     </div>
     <!--end of slider-->
 </section>
+<!--Call-to-action block-->
 <section class="call-to-action">
     <div class="telegram-container">
-        <h2 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h2>
+        <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
         <div class="telegram-button">
             <a href="" class="telegram-button__link">Telegram</a>
         </div>
     </div>
 </section>
+<!--end of call-to-action block-->
+<section class="utilities">
+    <div class="title-wrap">
+        <h2 class="title">Чем полезен чат-бот?</h2>
+    </div>
+    <div class="container">
+        <div class="card-box col-31">
+            <figure class="card-box__pic pic-box">
+                <img src="images/maintenance.png" alt="maintenance" class="pic-box__item">
+            </figure>
+            <p class="text">
+                Свежие интернет предложения по покупке/продаже автомобилей в твоем мессенджере
+            </p>
+        </div>
+        <div class="card-box col-31">
+            <figure class="card-box__pic pic-box">
+                <img src="images/car-service.png" alt="car-service" class="pic-box__item">
+            </figure>
+            <p class="text">
+                Получай рассылку свежых объявлений три раза в день
+            </p>
+        </div>
+        <div class="card-box col-31">
+            <figure class="card-box__pic pic-box">
+                <img src="images/document.png" alt="document" class="pic-box__item">
+            </figure>
+            <p class="text">
+                Быстро продавай/покупай автомобиль, благодаря большой базе подписчиков ЧАТ-БОТА
+            </p>
+        </div>
+        <div class="card-box col-31">
+            <figure class="card-box__pic pic-box">
+                <img src="images/settings.png" alt="settings" class="pic-box__item">
+            </figure>
+            <p class="text">
+                Автоматизируй подачу объявлений через личный кабинет ЧАТ-БОТА
+            </p>
+        </div>
+        <div class="card-box col-31">
+            <figure class="card-box__pic pic-box">
+                <img src="images/organization.png" alt="organization" class="pic-box__item">
+            </figure>
+            <p class="text">
+                Бесплатно рекламируй свой автомобиль, приглашай друзей – получай объявления в подарок
+            </p>
+        </div>
+        <div class="card-box col-31">
+            <figure class="card-box__pic pic-box">
+                <img src="images/hand.png" alt="hand" class="pic-box__item">
+            </figure>
+            <p class="text">
+                Зарабатывай в чат-боте - 10% от оплат твоих друзей – рефералов
+            </p>
+        </div>
+    </div>
+</section>
+<!--Call-to-action block-->
+<section class="call-to-action">
+    <div class="telegram-container">
+        <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
+        <div class="telegram-button">
+            <a href="" class="telegram-button__link">Telegram</a>
+        </div>
+    </div>
+</section>
+<!--end of call-to-action block-->
 </body>
 </html>
