added new block and grow scale on cards

--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <div class="telegram-button">
-            <a href="" class="telegram-button__link">Telegram</a>
-        </div>
+        <a href="#" class="telegram-container__button">Telegram</a>
     </div>
 </section>
 <!--end of call-to-action block-->
-<section class="utilities">
+<section class="wrapper">
     <div class="title-wrap">
         <h2 class="title">Чем полезен чат-бот?</h2>
     </div>
@@ -118,9 +116,62 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <div class="telegram-button">
-            <a href="" class="telegram-button__link">Telegram</a>
+        <a href="#" class="telegram-container__button">Telegram</a>
+    </div>
+</section>
+<!--end of call-to-action block-->
+<section class="wrapper">
+    <div class="title-wrap">
+        <h2 class="title">Как это работает?</h2>
+    </div>
+    <div class="container about">
+        <div class="video-container col-33-2">
+            <img src="images/play-button.svg" alt="play-button" class="video-container__play-button">
         </div>
+        <div class="desc-container col-66">
+            <div class="desc-container__item desc col-49-4 row-49">
+                <p class="desc__text">
+                    ЧАТ-БОТ собирает и отправляет актуальную информацию со свежими предложениями автомобилей три раза
+                    вдень.
+                </p>
+                <div class="desc__arrow arrow">
+                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
+                </div>
+            </div>
+            <div class="desc-container__item desc col-49-4 row-49">
+                <p class="desc__text">
+                    Задавай фильтры (марка, модель, год выпуска, цена, пробег, город, вид топлива, объем двигателя,
+                    коробка передач) и получай варианты... которые подходят именно тебе.
+                </p>
+                <div class="desc__arrow arrow">
+                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
+                </div>
+            </div>
+            <div class="desc-container__item desc col-49-4 row-49">
+                <p class="desc__text">
+                    Большая база пользователей, благодаря которой, ты быстро купиш/продашь свой автомобиль.
+                </p>
+                <div class="desc__arrow arrow">
+                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
+                </div>
+            </div>
+            <div class="desc-container__item desc col-49-4 row-49">
+                <p class="desc__text">
+                    Наличие «личного кабинета» в ЧАТ-БОТЕ, с возможностью автоматизировать подачу и обновления
+                    объявлений... о купле/продаже автомобиля прямо в твоем мессенджере.
+                </p>
+                <div class="desc__arrow arrow">
+                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--Call-to-action block-->
+<section class="call-to-action">
+    <div class="telegram-container">
+        <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
+        <a href="#" class="telegram-container__button">Telegram</a>
     </div>
 </section>
 <!--end of call-to-action block-->
