--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <a href="#" class="telegram-container__button">Telegram</a>
+        <a href="#" class="telegram-container__button">
+            <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
+	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
+		c-2.324-0.834-4.089-2.759-4.719-5.146l-12.83-48.622L4.821,93.928c-2.886-1.104-4.8-3.865-4.821-6.955
+		c-0.021-3.09,1.855-5.877,4.727-7.02l174.312-69.36c0.791-0.336,1.628-0.53,2.472-0.582c0.302-0.018,0.605-0.018,0.906-0.001
+		c1.748,0.104,3.465,0.816,4.805,2.13c0.139,0.136,0.271,0.275,0.396,0.42c1.11,1.268,1.72,2.814,1.835,4.389
+		c0.028,0.396,0.026,0.797-0.009,1.198c-0.024,0.286-0.065,0.571-0.123,0.854L159.898,173.38c-0.473,2.48-2.161,4.556-4.493,5.523
+		C154.48,179.287,153.503,179.476,152.531,179.476z M104.862,130.579l42.437,28.785L170.193,39.24l-82.687,79.566l17.156,11.638
+		C104.731,130.487,104.797,130.533,104.862,130.579z M69.535,124.178l5.682,21.53l12.242-8.809l-16.03-10.874
+		C70.684,125.521,70.046,124.893,69.535,124.178z M28.136,86.782l31.478,12.035c2.255,0.862,3.957,2.758,4.573,5.092l3.992,15.129
+		c0.183-1.745,0.974-3.387,2.259-4.624L149.227,38.6L28.136,86.782z" style="fill:#fff;"/>
+            </svg>
+            Telegram
+        </a>
     </div>
 </section>
 <!--end of call-to-action block-->
@@ -64,7 +78,7 @@
     <div class="container">
         <div class="card-box col-31">
             <figure class="card-box__pic pic-box">
-                <img src="images/maintenance.png" alt="maintenance" class="pic-box__item">
+                <img src="images/maintenance.svg" alt="maintenance" class="pic-box__item">
             </figure>
             <p class="text">
                 Свежие интернет предложения по покупке/продаже автомобилей в твоем мессенджере
@@ -72,7 +86,7 @@
         </div>
         <div class="card-box col-31">
             <figure class="card-box__pic pic-box">
-                <img src="images/car-service.png" alt="car-service" class="pic-box__item">
+                <img src="images/car-service.svg" alt="car-service" class="pic-box__item">
             </figure>
             <p class="text">
                 Получай рассылку свежых объявлений три раза в день
@@ -80,7 +94,7 @@
         </div>
         <div class="card-box col-31">
             <figure class="card-box__pic pic-box">
-                <img src="images/document.png" alt="document" class="pic-box__item">
+                <img src="images/document.svg" alt="document" class="pic-box__item">
             </figure>
             <p class="text">
                 Быстро продавай/покупай автомобиль, благодаря большой базе подписчиков ЧАТ-БОТА
@@ -88,7 +102,7 @@
         </div>
         <div class="card-box col-31">
             <figure class="card-box__pic pic-box">
-                <img src="images/settings.png" alt="settings" class="pic-box__item">
+                <img src="images/settings.svg" alt="settings" class="pic-box__item">
             </figure>
             <p class="text">
                 Автоматизируй подачу объявлений через личный кабинет ЧАТ-БОТА
@@ -96,7 +110,7 @@
         </div>
         <div class="card-box col-31">
             <figure class="card-box__pic pic-box">
-                <img src="images/organization.png" alt="organization" class="pic-box__item">
+                <img src="images/organization.svg" alt="organization" class="pic-box__item">
             </figure>
             <p class="text">
                 Бесплатно рекламируй свой автомобиль, приглашай друзей – получай объявления в подарок
@@ -104,7 +118,7 @@
         </div>
         <div class="card-box col-31">
             <figure class="card-box__pic pic-box">
-                <img src="images/hand.png" alt="hand" class="pic-box__item">
+                <img src="images/hand.svg" alt="hand" class="pic-box__item">
             </figure>
             <p class="text">
                 Зарабатывай в чат-боте - 10% от оплат твоих друзей – рефералов
@@ -116,7 +130,21 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <a href="#" class="telegram-container__button">Telegram</a>
+        <a href="#" class="telegram-container__button">
+            <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
+	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
+		c-2.324-0.834-4.089-2.759-4.719-5.146l-12.83-48.622L4.821,93.928c-2.886-1.104-4.8-3.865-4.821-6.955
+		c-0.021-3.09,1.855-5.877,4.727-7.02l174.312-69.36c0.791-0.336,1.628-0.53,2.472-0.582c0.302-0.018,0.605-0.018,0.906-0.001
+		c1.748,0.104,3.465,0.816,4.805,2.13c0.139,0.136,0.271,0.275,0.396,0.42c1.11,1.268,1.72,2.814,1.835,4.389
+		c0.028,0.396,0.026,0.797-0.009,1.198c-0.024,0.286-0.065,0.571-0.123,0.854L159.898,173.38c-0.473,2.48-2.161,4.556-4.493,5.523
+		C154.48,179.287,153.503,179.476,152.531,179.476z M104.862,130.579l42.437,28.785L170.193,39.24l-82.687,79.566l17.156,11.638
+		C104.731,130.487,104.797,130.533,104.862,130.579z M69.535,124.178l5.682,21.53l12.242-8.809l-16.03-10.874
+		C70.684,125.521,70.046,124.893,69.535,124.178z M28.136,86.782l31.478,12.035c2.255,0.862,3.957,2.758,4.573,5.092l3.992,15.129
+		c0.183-1.745,0.974-3.387,2.259-4.624L149.227,38.6L28.136,86.782z" style="fill:#fff;"/>
+            </svg>
+            Telegram
+        </a>
     </div>
 </section>
 <!--end of call-to-action block-->
@@ -134,35 +162,35 @@
                     ЧАТ-БОТ собирает и отправляет актуальную информацию со свежими предложениями автомобилей три раза
                     вдень.
                 </p>
-                <div class="desc__arrow arrow">
-                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
-                </div>
+                <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
+                    <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
+                </svg>
             </div>
             <div class="desc-container__item desc col-49-4 row-49">
                 <p class="desc__text">
                     Задавай фильтры (марка, модель, год выпуска, цена, пробег, город, вид топлива, объем двигателя,
                     коробка передач) и получай варианты... которые подходят именно тебе.
                 </p>
-                <div class="desc__arrow arrow">
-                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
-                </div>
+                <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
+                    <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
+                </svg>
             </div>
             <div class="desc-container__item desc col-49-4 row-49">
                 <p class="desc__text">
                     Большая база пользователей, благодаря которой, ты быстро купиш/продашь свой автомобиль.
                 </p>
-                <div class="desc__arrow arrow">
-                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
-                </div>
+                <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
+                    <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
+                </svg>
             </div>
             <div class="desc-container__item desc col-49-4 row-49">
                 <p class="desc__text">
                     Наличие «личного кабинета» в ЧАТ-БОТЕ, с возможностью автоматизировать подачу и обновления
                     объявлений... о купле/продаже автомобиля прямо в твоем мессенджере.
                 </p>
-                <div class="desc__arrow arrow">
-                    <img src="images/arrow-down.png" alt="arrow" class="arrow__img">
-                </div>
+                <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
+                    <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
+                </svg>
             </div>
         </div>
     </div>
@@ -171,7 +199,21 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <a href="#" class="telegram-container__button">Telegram</a>
+        <a href="#" class="telegram-container__button">
+            <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
+	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
+		c-2.324-0.834-4.089-2.759-4.719-5.146l-12.83-48.622L4.821,93.928c-2.886-1.104-4.8-3.865-4.821-6.955
+		c-0.021-3.09,1.855-5.877,4.727-7.02l174.312-69.36c0.791-0.336,1.628-0.53,2.472-0.582c0.302-0.018,0.605-0.018,0.906-0.001
+		c1.748,0.104,3.465,0.816,4.805,2.13c0.139,0.136,0.271,0.275,0.396,0.42c1.11,1.268,1.72,2.814,1.835,4.389
+		c0.028,0.396,0.026,0.797-0.009,1.198c-0.024,0.286-0.065,0.571-0.123,0.854L159.898,173.38c-0.473,2.48-2.161,4.556-4.493,5.523
+		C154.48,179.287,153.503,179.476,152.531,179.476z M104.862,130.579l42.437,28.785L170.193,39.24l-82.687,79.566l17.156,11.638
+		C104.731,130.487,104.797,130.533,104.862,130.579z M69.535,124.178l5.682,21.53l12.242-8.809l-16.03-10.874
+		C70.684,125.521,70.046,124.893,69.535,124.178z M28.136,86.782l31.478,12.035c2.255,0.862,3.957,2.758,4.573,5.092l3.992,15.129
+		c0.183-1.745,0.974-3.387,2.259-4.624L149.227,38.6L28.136,86.782z" style="fill:#fff;"/>
+            </svg>
+            Telegram
+        </a>
     </div>
 </section>
 <!--end of call-to-action block-->
