fix 1st acordeon panel

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
     </div>
     <div class="acordeon">
         <div class="panel container">
-            <div class="panel__heading">
+            <div class="panel__heading in">
                 Как быстро связатся с продавцом и приобрести автомобиль?
             </div>
-            <p class="panel__text">
+            <p class="panel__text" style="display:block">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
                 natoque
