added few sections

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 <section class="head-page">
-    <div class="logo">
+    <h1 class="logo">
         <a href="#" class="logo__link">Auto_UA-Bot</a>
-    </div>
+    </h1>
     <nav class="nav-container">
         <ul class="nav-bar">
             <li class="nav-bar__item nav-btn">
@@ -39,11 +39,11 @@
     <div class="slider-container">
         <figure class="slider-container__item"></figure>
         <div class="title-wrapper">
-            <h1 class="slide-title">
+            <h2 class="slide-title">
                 <span class="slide-title__item">Чат-бот для тех, кто хочет купить</span><br>
                 <span class="slide-title__item">или продать автомобиль</span><br>
                 <span class="slide-title__item">быстро и выгодно</span>
-            </h1>
+            </h2>
 
             <h3 class="title-wrapper__subtitle">Лучшие предложения <br>в твоем телефоне</h3>
         </div>
@@ -54,7 +54,7 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <a href="#" class="telegram-container__button">
+        <a href="#" class="telegram-container__button button-animation">
             <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
 	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
@@ -131,7 +131,7 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <a href="#" class="telegram-container__button">
+        <a href="#" class="telegram-container__button button-animation">
             <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
 	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
@@ -200,7 +200,7 @@
 <section class="call-to-action">
     <div class="telegram-container">
         <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
-        <a href="#" class="telegram-container__button">
+        <a href="#" class="telegram-container__button button-animation">
             <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
 	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
@@ -223,7 +223,7 @@
     <div class="title-wrap">
         <h2 class="title">FAQ</h2>
     </div>
-    <div class="acordeon">
+    <div class="dropdown">
         <div class="panel container">
             <div class="panel__heading in">
                 Как быстро связатся с продавцом и приобрести автомобиль?
@@ -286,6 +286,113 @@
         </div>
     </div>
 </section>
+<section class="wide-wrapper">
+    <div class="form-wrapper">
+        <div class="question-container">
+            <h3 class="question-container__heading">У вас есть вопросы?</h3>
+            <p class="question-container__text">Напишите нам!</p>
+            <figure class="img-container">
+            </figure>
+        </div>
+        <form action="index.php" class="form">
+            <input type="text" title="Имя" name="name" placeholder="ИМЯ*" autocomplete="off" class="form__item input">
+            <input type="tel" title="Номер телефона" name="tel" placeholder="ТЕЛЕФОН*" autocomplete="off"
+                   class="form__item input">
+            <textarea name="question" title="Ваш вопрос" placeholder="НАПИШИТЕ ВОПРОС*"
+                      class="form__item text-area"></textarea>
+            <button class="form__btn">ОТПРАВИТЬ</button>
+        </form>
+    </div>
+
+</section>
+<!--Call-to-action block-->
+<section class="call-to-action">
+    <div class="telegram-container">
+        <h3 class="telegram-container__title">Зайди в чат-бот в своем мессенджере</h3>
+        <a href="#" class="telegram-container__button button-animation">
+            <svg version="1.1" class="telegram-logo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 viewBox="0 0 189.473 189.473" style="enable-background:new 0 0 189.473 189.473;" xml:space="preserve">
+	<path d="M152.531,179.476c-1.48,0-2.95-0.438-4.211-1.293l-47.641-32.316l-25.552,18.386c-2.004,1.441-4.587,1.804-6.914,0.972
+		c-2.324-0.834-4.089-2.759-4.719-5.146l-12.83-48.622L4.821,93.928c-2.886-1.104-4.8-3.865-4.821-6.955
+		c-0.021-3.09,1.855-5.877,4.727-7.02l174.312-69.36c0.791-0.336,1.628-0.53,2.472-0.582c0.302-0.018,0.605-0.018,0.906-0.001
+		c1.748,0.104,3.465,0.816,4.805,2.13c0.139,0.136,0.271,0.275,0.396,0.42c1.11,1.268,1.72,2.814,1.835,4.389
+		c0.028,0.396,0.026,0.797-0.009,1.198c-0.024,0.286-0.065,0.571-0.123,0.854L159.898,173.38c-0.473,2.48-2.161,4.556-4.493,5.523
+		C154.48,179.287,153.503,179.476,152.531,179.476z M104.862,130.579l42.437,28.785L170.193,39.24l-82.687,79.566l17.156,11.638
+		C104.731,130.487,104.797,130.533,104.862,130.579z M69.535,124.178l5.682,21.53l12.242-8.809l-16.03-10.874
+		C70.684,125.521,70.046,124.893,69.535,124.178z M28.136,86.782l31.478,12.035c2.255,0.862,3.957,2.758,4.573,5.092l3.992,15.129
+		c0.183-1.745,0.974-3.387,2.259-4.624L149.227,38.6L28.136,86.782z" style="fill:#fff;"/>
+            </svg>
+            Telegram
+        </a>
+    </div>
+</section>
+<!--end of call-to-action block-->
+<footer class="footer">
+    <h3 class="socials-title">Будем благодарны, если вы поможете сделать репост своим друзьям на наш сайт:</h3>
+    <div class="socials">
+        <div class="inner">
+            <figure class="socials-logo logo-facebook"></figure>
+            <a href="#" class="social-btn social-btn--dark">FACEBOOK</a>
+        </div>
+        <div class="inner">
+            <figure class="socials-logo logo-viber"></figure>
+            <a href="#" class="social-btn social-btn--dark">VIBER</a>
+        </div>
+        <div class="inner">
+            <figure class="socials-logo logo-telegram"></figure>
+            <a href="#" class="social-btn social-btn--dark">TELEGRAM</a>
+        </div>
+        <div class="inner">
+            <figure class="socials-logo logo-whatsapp"></figure>
+            <a href="#" class="social-btn social-btn--dark">WHATSAPP</a>
+        </div>
+    </div>
+    <div class="subs-wrapper">
+        <h2 class="subs-wrapper__title">Также можешь подписаться на нас :</h2>
+        <div class="subs-container">
+            <div class="inner subs-container__item">
+                <svg class="facebook subs-logo logo-facebook--dark" viewBox="-110 1 511 511.99996"
+                     xmlns="http://www.w3.org/2000/svg" width="17" height="30">
+                    <path d="m180 512h-81.992188c-13.695312 0-24.835937-11.140625-24.835937-24.835938v-184.9375h-47.835937c-13.695313 0-24.835938-11.144531-24.835938-24.835937v-79.246094c0-13.695312 11.140625-24.835937 24.835938-24.835937h47.835937v-39.683594c0-39.347656 12.355469-72.824219 35.726563-96.804688 23.476562-24.089843 56.285156-36.820312 94.878906-36.820312l62.53125.101562c13.671875.023438 24.792968 11.164063 24.792968 24.835938v73.578125c0 13.695313-11.136718 24.835937-24.828124 24.835937l-42.101563.015626c-12.839844 0-16.109375 2.574218-16.808594 3.363281-1.152343 1.308593-2.523437 5.007812-2.523437 15.222656v31.351563h58.269531c4.386719 0 8.636719 1.082031 12.289063 3.121093 7.878906 4.402344 12.777343 12.726563 12.777343 21.722657l-.03125 79.246093c0 13.6875-11.140625 24.828125-24.835937 24.828125h-58.46875v184.941406c0 13.695313-11.144532 24.835938-24.839844 24.835938zm-76.8125-30.015625h71.632812v-193.195313c0-9.144531 7.441407-16.582031 16.582032-16.582031h66.726562l.027344-68.882812h-66.757812c-9.140626 0-16.578126-7.4375-16.578126-16.582031v-44.789063c0-11.726563 1.191407-25.0625 10.042969-35.085937 10.695313-12.117188 27.550781-13.515626 39.300781-13.515626l36.921876-.015624v-63.226563l-57.332032-.09375c-62.023437 0-100.566406 39.703125-100.566406 103.609375v53.117188c0 9.140624-7.4375 16.582031-16.578125 16.582031h-56.09375v68.882812h56.09375c9.140625 0 16.578125 7.4375 16.578125 16.582031zm163.0625-451.867187h.003906zm0 0"
+                          fill="#000"/>
+                </svg>
+                <a href="#" class="social-btn social-btn--narrow--white">facebook</a>
+            </div>
+            <div class="inner subs-container__item">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="instagram subs-logo logo-instagram" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="26" height="26">
+                    <path d="M363.273,0H148.728C66.719,0,0,66.719,0,148.728v214.544C0,445.281,66.719,512,148.728,512h214.544    C445.281,512,512,445.281,512,363.273V148.728C512,66.719,445.281,0,363.273,0z M472,363.272C472,423.225,423.225,472,363.273,472    H148.728C88.775,472,40,423.225,40,363.273V148.728C40,88.775,88.775,40,148.728,40h214.544C423.225,40,472,88.775,472,148.728    V363.272z" class="active-path" fill="#000"/>
+                    <path d="M256,118c-76.094,0-138,61.906-138,138s61.906,138,138,138s138-61.906,138-138S332.094,118,256,118z M256,354    c-54.037,0-98-43.963-98-98s43.963-98,98-98s98,43.963,98,98S310.037,354,256,354z" class="active-path" fill="#000"/>
+                    <circle cx="396" cy="116" r="20" class="active-path" fill="#000"/>
+                </svg>
+                <a href="#" class="social-btn social-btn--narrow--white">Instagram</a>
+            </div>
+            <div class="inner subs-container__item">
+                <svg class="youtube-icon subs-logo logo-youtube" viewBox="0 -62 512.002 512"
+                     xmlns="http://www.w3.org/2000/svg"
+                     width="34" height="26">
+                    <path d="M334.809 170.992l-113.114-61.89c-6.504-3.559-14.191-3.426-20.566.351-6.379 3.781-10.184 10.461-10.184 17.875v122.719c0 7.379 3.782 14.047 10.118 17.832 3.308 1.976 6.976 2.969 10.652 2.969a20.74 20.74 0 0 0 9.848-2.504L334.68 207.52a20.772 20.772 0 0 0 10.937-18.223 20.763 20.763 0 0 0-10.808-18.305zm-113.86 63.617v-91.718l84.54 46.257zm0 0"
+                          fill="#000"/>
+                    <path d="M508.234 91.527l-.023-.234c-.434-4.121-4.75-40.777-22.57-59.422C465.043 9.941 441.69 7.277 430.46 6a135.45 135.45 0 0 1-2.543-.305l-.895-.093C359.336.68 257.113.008 256.09.004L256 0l-.09.004C254.887.008 152.664.68 84.367 5.602l-.902.093c-.727.098-1.528.188-2.399.29-11.101 1.28-34.203 3.949-54.859 26.671C9.234 51.102 4.328 86.973 3.824 91.004l-.058.523C3.613 93.242 0 134.067 0 175.051v38.312c0 40.985 3.613 81.809 3.766 83.528l.027.257c.434 4.055 4.746 40.04 22.484 58.692 19.368 21.195 43.856 24 57.028 25.508 2.082.238 3.875.441 5.097.656l1.184.164c39.082 3.719 161.617 5.55 166.812 5.625l.157.004.156-.004c1.023-.004 103.242-.676 170.93-5.598l.894-.093c.856-.114 1.817-.215 2.871-.325 11.04-1.172 34.016-3.605 54.387-26.02 16.973-18.448 21.883-54.32 22.383-58.347l.058-.523c.153-1.719 3.77-42.54 3.77-83.524v-38.312c-.004-40.985-3.617-81.805-3.77-83.524zm-26.238 121.836c0 37.934-3.312 77-3.625 80.586-1.273 9.88-6.45 32.574-14.719 41.563-12.75 14.027-25.847 15.418-35.41 16.43a164.16 164.16 0 0 0-3.195.359c-65.469 4.734-163.832 5.46-168.363 5.488-5.082-.074-125.825-1.922-163.715-5.441-1.942-.317-4.04-.559-6.25-.809-11.215-1.285-26.567-3.043-38.371-16.027l-.278-.297c-8.125-8.465-13.152-29.688-14.43-41.149-.238-2.71-3.636-42.238-3.636-80.703v-38.312c0-37.89 3.305-76.914 3.625-80.574 1.52-11.637 6.793-32.957 14.719-41.575 13.14-14.453 26.996-16.054 36.16-17.113.875-.102 1.691-.195 2.445-.293 66.422-4.758 165.492-5.465 169.047-5.492 3.555.023 102.59.734 168.422 5.492.808.102 1.691.203 2.64.313 9.426 1.074 23.672 2.699 36.747 16.644l.12.129c8.126 8.465 13.153 30.059 14.43 41.75.227 2.559 3.637 42.172 3.637 80.719zm0 0"
+                          fill="#000"/>
+                </svg>
+                <a href="#" class="social-btn social-btn--narrow--white">Youtube</a>
+            </div>
+        </div>
+    </div>
+    <div class="docs-container">
+        <a href="#" class="social-btn social-btn--white">Договор публичной оферты</a>
+        <a href="#" class="social-btn social-btn--white">Агентский договор оферта</a>
+        <a href="#" class="social-btn social-btn--white">Правила использования</a>
+        <a href="#" class="social-btn social-btn--white">Политика конфиденциальности</a>
+    </div>
+    <div class="copyright">Created by
+        <a href="#" class="copyright__link">
+            <span class="copyright__link--light">M</span>
+            <span class="copyright__link--dark">W</span>
+        </a>
+    </div>
+</footer>
+
 <script>
     <!--акордеон временно в разметке-->
     $(document).ready(function () {
