--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Document</title>
 </head>
 <body>
-<section class="head-page">
-    <h1 class="logo">
+<div class="head-wrapper">
+    <div class="logo">
         <a href="#" class="logo__link">Auto_UA-Bot</a>
-    </h1>
+    </div>
     <nav class="nav-container">
         <ul class="nav-bar">
             <li class="nav-bar__item nav-btn">
@@ -34,22 +34,24 @@
             </li>
         </ul>
     </nav>
+</div>
 
-    <!--slider-->
+<!--slider-->
+<section class="slider">
     <div class="slider-container">
         <figure class="slider-container__item"></figure>
         <div class="title-wrapper">
-            <h2 class="slide-title">
+            <h1 class="slide-title">
                 <span class="slide-title__item">Чат-бот для тех, кто хочет купить</span><br>
                 <span class="slide-title__item">или продать автомобиль</span><br>
                 <span class="slide-title__item">быстро и выгодно</span>
-            </h2>
-
+            </h1>
             <h3 class="title-wrapper__subtitle">Лучшие предложения <br>в твоем телефоне</h3>
         </div>
     </div>
-    <!--end of slider-->
 </section>
+<!--end of slider-->
+
 <!--Call-to-action block-->
 <section class="call-to-action">
     <div class="telegram-container">
@@ -72,12 +74,13 @@
     </div>
 </section>
 <!--end of call-to-action block-->
+
 <section class="wrapper">
     <div class="title-wrap">
         <h2 class="title">Чем полезен чат-бот?</h2>
     </div>
     <div class="container">
-        <div class="card-box col-31">
+        <div class="card-box">
             <figure class="card-box__pic pic-box">
                 <img src="images/maintenance.svg" alt="maintenance" class="pic-box__item">
             </figure>
@@ -85,7 +88,7 @@
                 Свежие интернет предложения по покупке/продаже автомобилей в твоем мессенджере
             </p>
         </div>
-        <div class="card-box col-31">
+        <div class="card-box">
             <figure class="card-box__pic pic-box">
                 <img src="images/car-service.svg" alt="car-service" class="pic-box__item">
             </figure>
@@ -93,7 +96,7 @@
                 Получай рассылку свежых объявлений три раза в день
             </p>
         </div>
-        <div class="card-box col-31">
+        <div class="card-box">
             <figure class="card-box__pic pic-box">
                 <img src="images/document.svg" alt="document" class="pic-box__item">
             </figure>
@@ -101,7 +104,7 @@
                 Быстро продавай/покупай автомобиль, благодаря большой базе подписчиков ЧАТ-БОТА
             </p>
         </div>
-        <div class="card-box col-31">
+        <div class="card-box">
             <figure class="card-box__pic pic-box">
                 <img src="images/settings.svg" alt="settings" class="pic-box__item">
             </figure>
@@ -109,7 +112,7 @@
                 Автоматизируй подачу объявлений через личный кабинет ЧАТ-БОТА
             </p>
         </div>
-        <div class="card-box col-31">
+        <div class="card-box">
             <figure class="card-box__pic pic-box">
                 <img src="images/organization.svg" alt="organization" class="pic-box__item">
             </figure>
@@ -117,7 +120,7 @@
                 Бесплатно рекламируй свой автомобиль, приглашай друзей – получай объявления в подарок
             </p>
         </div>
-        <div class="card-box col-31">
+        <div class="card-box">
             <figure class="card-box__pic pic-box">
                 <img src="images/hand.svg" alt="hand" class="pic-box__item">
             </figure>
@@ -127,6 +130,7 @@
         </div>
     </div>
 </section>
+
 <!--Call-to-action block-->
 <section class="call-to-action">
     <div class="telegram-container">
@@ -153,21 +157,37 @@
     <div class="title-wrap">
         <h2 class="title">Как это работает?</h2>
     </div>
+
+
     <div class="container about">
-        <div class="video-container col-33-2">
+        <div class="video-container">
             <img src="images/play-button.svg" alt="play-button" class="video-container__play-button">
         </div>
-        <div class="desc-container col-66">
-            <div class="desc-container__item desc col-49-4 row-49">
+
+        <div class="desc-container">
+            <div class="desc-container__item desc">
                 <p class="desc__text">
-                    ЧАТ-БОТ собирает и отправляет актуальную информацию со свежими предложениями автомобилей три раза
+                    ЧАТ-БОТ собирает и отправляет актуальную информацию со свежими предложениями автомобилей три
+                    раза
                     вдень.
                 </p>
                 <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
                     <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
                 </svg>
             </div>
-            <div class="desc-container__item desc col-49-4 row-49">
+
+            <div class="desc-container__item desc">
+                <p class="desc__text">
+                    Большая база пользователей, благодаря которой, ты быстро купиш/продашь свой автомобиль.
+                </p>
+                <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
+                    <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
+                </svg>
+            </div>
+        </div>
+
+        <div class="desc-container">
+            <div class="desc-container__item desc">
                 <p class="desc__text">
                     Задавай фильтры (марка, модель, год выпуска, цена, пробег, город, вид топлива, объем двигателя,
                     коробка передач) и получай варианты... которые подходят именно тебе.
@@ -176,15 +196,8 @@
                     <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
                 </svg>
             </div>
-            <div class="desc-container__item desc col-49-4 row-49">
-                <p class="desc__text">
-                    Большая база пользователей, благодаря которой, ты быстро купиш/продашь свой автомобиль.
-                </p>
-                <svg class="arrow-down" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 444.819 444.819" style="enable-background:new 0 0 444.819 444.819;" xml:space="preserve">
-                    <path d="M434.252,114.203l-21.409-21.416c-7.419-7.04-16.084-10.561-25.975-10.561c-10.095,0-18.657,3.521-25.7,10.561   L222.41,231.549L83.653,92.791c-7.042-7.04-15.606-10.561-25.697-10.561c-9.896,0-18.559,3.521-25.979,10.561l-21.128,21.416   C3.615,121.436,0,130.099,0,140.188c0,10.277,3.619,18.842,10.848,25.693l185.864,185.865c6.855,7.23,15.416,10.848,25.697,10.848   c10.088,0,18.75-3.617,25.977-10.848l185.865-185.865c7.043-7.044,10.567-15.608,10.567-25.693   C444.819,130.287,441.295,121.629,434.252,114.203z" class="active-path" fill="#fff"/>
-                </svg>
-            </div>
-            <div class="desc-container__item desc col-49-4 row-49">
+
+            <div class="desc-container__item desc">
                 <p class="desc__text">
                     Наличие «личного кабинета» в ЧАТ-БОТЕ, с возможностью автоматизировать подачу и обновления
                     объявлений... о купле/продаже автомобиля прямо в твоем мессенджере.
@@ -194,7 +207,10 @@
                 </svg>
             </div>
         </div>
+
     </div>
+
+
 </section>
 <!--Call-to-action block-->
 <section class="call-to-action">
@@ -333,8 +349,10 @@
     <div class="socials">
         <div class="inner socials__item">
             <a href="#" class="social-btn social-btn--dark btn--white">FACEBOOK
-                <svg class="svg--white socials-logo logo-facebook facebook" viewBox="-110 1 511 511.99996" xmlns="http://www.w3.org/2000/svg">
-                    <path d="m180 512h-81.992188c-13.695312 0-24.835937-11.140625-24.835937-24.835938v-184.9375h-47.835937c-13.695313 0-24.835938-11.144531-24.835938-24.835937v-79.246094c0-13.695312 11.140625-24.835937 24.835938-24.835937h47.835937v-39.683594c0-39.347656 12.355469-72.824219 35.726563-96.804688 23.476562-24.089843 56.285156-36.820312 94.878906-36.820312l62.53125.101562c13.671875.023438 24.792968 11.164063 24.792968 24.835938v73.578125c0 13.695313-11.136718 24.835937-24.828124 24.835937l-42.101563.015626c-12.839844 0-16.109375 2.574218-16.808594 3.363281-1.152343 1.308593-2.523437 5.007812-2.523437 15.222656v31.351563h58.269531c4.386719 0 8.636719 1.082031 12.289063 3.121093 7.878906 4.402344 12.777343 12.726563 12.777343 21.722657l-.03125 79.246093c0 13.6875-11.140625 24.828125-24.835937 24.828125h-58.46875v184.941406c0 13.695313-11.144532 24.835938-24.839844 24.835938zm-76.8125-30.015625h71.632812v-193.195313c0-9.144531 7.441407-16.582031 16.582032-16.582031h66.726562l.027344-68.882812h-66.757812c-9.140626 0-16.578126-7.4375-16.578126-16.582031v-44.789063c0-11.726563 1.191407-25.0625 10.042969-35.085937 10.695313-12.117188 27.550781-13.515626 39.300781-13.515626l36.921876-.015624v-63.226563l-57.332032-.09375c-62.023437 0-100.566406 39.703125-100.566406 103.609375v53.117188c0 9.140624-7.4375 16.582031-16.578125 16.582031h-56.09375v68.882812h56.09375c9.140625 0 16.578125 7.4375 16.578125 16.582031zm163.0625-451.867187h.003906zm0 0" fill="#fff"/>
+                <svg class="svg--white socials-logo logo-facebook facebook" viewBox="-110 1 511 511.99996"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="m180 512h-81.992188c-13.695312 0-24.835937-11.140625-24.835937-24.835938v-184.9375h-47.835937c-13.695313 0-24.835938-11.144531-24.835938-24.835937v-79.246094c0-13.695312 11.140625-24.835937 24.835938-24.835937h47.835937v-39.683594c0-39.347656 12.355469-72.824219 35.726563-96.804688 23.476562-24.089843 56.285156-36.820312 94.878906-36.820312l62.53125.101562c13.671875.023438 24.792968 11.164063 24.792968 24.835938v73.578125c0 13.695313-11.136718 24.835937-24.828124 24.835937l-42.101563.015626c-12.839844 0-16.109375 2.574218-16.808594 3.363281-1.152343 1.308593-2.523437 5.007812-2.523437 15.222656v31.351563h58.269531c4.386719 0 8.636719 1.082031 12.289063 3.121093 7.878906 4.402344 12.777343 12.726563 12.777343 21.722657l-.03125 79.246093c0 13.6875-11.140625 24.828125-24.835937 24.828125h-58.46875v184.941406c0 13.695313-11.144532 24.835938-24.839844 24.835938zm-76.8125-30.015625h71.632812v-193.195313c0-9.144531 7.441407-16.582031 16.582032-16.582031h66.726562l.027344-68.882812h-66.757812c-9.140626 0-16.578126-7.4375-16.578126-16.582031v-44.789063c0-11.726563 1.191407-25.0625 10.042969-35.085937 10.695313-12.117188 27.550781-13.515626 39.300781-13.515626l36.921876-.015624v-63.226563l-57.332032-.09375c-62.023437 0-100.566406 39.703125-100.566406 103.609375v53.117188c0 9.140624-7.4375 16.582031-16.578125 16.582031h-56.09375v68.882812h56.09375c9.140625 0 16.578125 7.4375 16.578125 16.582031zm163.0625-451.867187h.003906zm0 0"
+                          fill="#fff"/>
                 </svg>
             </a>
         </div>
@@ -416,7 +434,8 @@
             <div class="inner subs-container__item">
                 <svg class="svg-icon facebook subs-logo logo-facebook--dark" viewBox="-110 1 511 511.99996"
                      xmlns="http://www.w3.org/2000/svg" width="17" height="30">
-                    <path d="m180 512h-81.992188c-13.695312 0-24.835937-11.140625-24.835937-24.835938v-184.9375h-47.835937c-13.695313 0-24.835938-11.144531-24.835938-24.835937v-79.246094c0-13.695312 11.140625-24.835937 24.835938-24.835937h47.835937v-39.683594c0-39.347656 12.355469-72.824219 35.726563-96.804688 23.476562-24.089843 56.285156-36.820312 94.878906-36.820312l62.53125.101562c13.671875.023438 24.792968 11.164063 24.792968 24.835938v73.578125c0 13.695313-11.136718 24.835937-24.828124 24.835937l-42.101563.015626c-12.839844 0-16.109375 2.574218-16.808594 3.363281-1.152343 1.308593-2.523437 5.007812-2.523437 15.222656v31.351563h58.269531c4.386719 0 8.636719 1.082031 12.289063 3.121093 7.878906 4.402344 12.777343 12.726563 12.777343 21.722657l-.03125 79.246093c0 13.6875-11.140625 24.828125-24.835937 24.828125h-58.46875v184.941406c0 13.695313-11.144532 24.835938-24.839844 24.835938zm-76.8125-30.015625h71.632812v-193.195313c0-9.144531 7.441407-16.582031 16.582032-16.582031h66.726562l.027344-68.882812h-66.757812c-9.140626 0-16.578126-7.4375-16.578126-16.582031v-44.789063c0-11.726563 1.191407-25.0625 10.042969-35.085937 10.695313-12.117188 27.550781-13.515626 39.300781-13.515626l36.921876-.015624v-63.226563l-57.332032-.09375c-62.023437 0-100.566406 39.703125-100.566406 103.609375v53.117188c0 9.140624-7.4375 16.582031-16.578125 16.582031h-56.09375v68.882812h56.09375c9.140625 0 16.578125 7.4375 16.578125 16.582031zm163.0625-451.867187h.003906zm0 0" fill="#000"/>
+                    <path d="m180 512h-81.992188c-13.695312 0-24.835937-11.140625-24.835937-24.835938v-184.9375h-47.835937c-13.695313 0-24.835938-11.144531-24.835938-24.835937v-79.246094c0-13.695312 11.140625-24.835937 24.835938-24.835937h47.835937v-39.683594c0-39.347656 12.355469-72.824219 35.726563-96.804688 23.476562-24.089843 56.285156-36.820312 94.878906-36.820312l62.53125.101562c13.671875.023438 24.792968 11.164063 24.792968 24.835938v73.578125c0 13.695313-11.136718 24.835937-24.828124 24.835937l-42.101563.015626c-12.839844 0-16.109375 2.574218-16.808594 3.363281-1.152343 1.308593-2.523437 5.007812-2.523437 15.222656v31.351563h58.269531c4.386719 0 8.636719 1.082031 12.289063 3.121093 7.878906 4.402344 12.777343 12.726563 12.777343 21.722657l-.03125 79.246093c0 13.6875-11.140625 24.828125-24.835937 24.828125h-58.46875v184.941406c0 13.695313-11.144532 24.835938-24.839844 24.835938zm-76.8125-30.015625h71.632812v-193.195313c0-9.144531 7.441407-16.582031 16.582032-16.582031h66.726562l.027344-68.882812h-66.757812c-9.140626 0-16.578126-7.4375-16.578126-16.582031v-44.789063c0-11.726563 1.191407-25.0625 10.042969-35.085937 10.695313-12.117188 27.550781-13.515626 39.300781-13.515626l36.921876-.015624v-63.226563l-57.332032-.09375c-62.023437 0-100.566406 39.703125-100.566406 103.609375v53.117188c0 9.140624-7.4375 16.582031-16.578125 16.582031h-56.09375v68.882812h56.09375c9.140625 0 16.578125 7.4375 16.578125 16.582031zm163.0625-451.867187h.003906zm0 0"
+                          fill="#000"/>
                 </svg>
                 <a href="#" class="social-btn social-btn--narrow--white btn-hover">facebook</a>
             </div>
